force-app/main/default/objects/BrokerApplication__c/fields/AddressLine01__c.field-meta.xml
<CustomField>
    <fullName>AddressLine01__c</fullName>
    <label>Address Line 01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>