force-app/main/default/objects/BrokerApplication__c/fields/AddressLine02__c.field-meta.xml
<CustomField>
    <fullName>AddressLine02__c</fullName>
    <label>Address Line 02</label>
    <length>75</length>
    <type>Text</type>
</CustomField>