force-app/main/default/objects/BrokerApplication__c/fields/ADM__c.field-meta.xml
<CustomField>
    <fullName>ADM__c</fullName>
    <label>ADM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>