force-app/main/default/objects/BrokerApplication__c/fields/ADMORN__c.field-meta.xml
<CustomField>
    <fullName>ADMORN__c</fullName>
    <label>ADM/ORN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>