force-app/main/default/objects/BrokerApplication__c/fields/ADMORNExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ADMORNExpiryDate__c</fullName>
    <label>ADM/ORN Expiry Date</label>
    <type>Date</type>
</CustomField>