force-app/main/default/objects/BrokerApplication__c/fields/AgencyType__c.field-meta.xml
<CustomField>
    <fullName>AgencyType__c</fullName>
    <label>Agency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agency_Type</valueSetName>
    </valueSet>
</CustomField>