force-app/main/default/objects/BrokerApplication__c/fields/AgreementExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>AgreementExpiryDate__c</fullName>
    <formula>ADDMONTHS(AgreementInitiationdate__c, 12) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Expiry Date</label>
    <type>Date</type>
</CustomField>