force-app/main/default/objects/BrokerApplication__c/fields/AgreementInitiationdate__c.field-meta.xml
<CustomField>
    <fullName>AgreementInitiationdate__c</fullName>
    <label>Agreement Initiation date</label>
    <type>Date</type>
</CustomField>