force-app/main/default/objects/BrokerApplication__c/fields/AgreementRemainingDays__c.field-meta.xml
<CustomField>
    <fullName>AgreementRemainingDays__c</fullName>
    <label>Agreement Remaining Days</label>
    <length>75</length>
    <type>Text</type>
</CustomField>