force-app/main/default/objects/BrokerApplication__c/fields/ApplicationNumber__c.field-meta.xml
<CustomField>
    <fullName>ApplicationNumber__c</fullName>
    <displayFormat>BA-{000000}</displayFormat>
    <label>Application Number</label>
    <type>AutoNumber</type>
</CustomField>