force-app/main/default/objects/BrokerApplication__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Under Agreement</fullName>
            </value>
            <value>
                <fullName>Agreement Completed</fullName>
            </value>
            <value>
                <fullName>Approved by BL</fullName>
                <isActive>false</isActive>
                <label>Approved by BL</label>
            </value>
            <value>
                <fullName>Approved by BBM</fullName>
                <isActive>false</isActive>
                <label>Approved by BM</label>
            </value>
            <value>
                <fullName>Rejected by BBM</fullName>
                <isActive>false</isActive>
                <label>Rejected by BBM</label>
            </value>
            <value>
                <fullName>Rejected by BL</fullName>
                <isActive>false</isActive>
                <label>Rejected by BL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>