force-app/main/default/objects/BrokerApplication__c/fields/BankBranch__c.field-meta.xml
<CustomField>
    <fullName>BankBranch__c</fullName>
    <label>Bank Branch</label>
    <length>18</length>
    <type>Text</type>
</CustomField>