force-app/main/default/objects/BrokerApplication__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <description>This Bank Name field consist of all Banks in UAE for Domestic Broker</description>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BankName</valueSetName>
    </valueSet>
</CustomField>