force-app/main/default/objects/BrokerApplication__c/fields/BBMId__c.field-meta.xml
<CustomField>
    <fullName>BBMId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BBM Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>