force-app/main/default/objects/BrokerApplication__c/fields/BeneficiaryName__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryName__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficiary Name</label>
    <type>Text</type>
</CustomField>