force-app/main/default/objects/BrokerApplication__c/fields/BLId__c.field-meta.xml
<CustomField>
    <fullName>BLId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BL Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Applications_BL</relationshipName>
    <type>Lookup</type>
</CustomField>