force-app/main/default/objects/BrokerApplication__c/fields/BloomSignatoryEmail__c.field-meta.xml
<CustomField>
    <fullName>BloomSignatoryEmail__c</fullName>
    <label>Bloom Signatory Email</label>
    <type>Email</type>
</CustomField>