force-app/main/default/objects/BrokerApplication__c/fields/BloomSignatoryName__c.field-meta.xml
<CustomField>
    <fullName>BloomSignatoryName__c</fullName>
    <label>Bloom Signatory Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>