force-app/main/default/objects/BrokerApplication__c/fields/BrokerSigned__c.field-meta.xml
<CustomField>
    <fullName>BrokerSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker Signed</label>
    <type>Checkbox</type>
</CustomField>