force-app/main/default/objects/BrokerApplication__c/fields/CommercialLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercialLicenseNumber__c</fullName>
    <label>Commercial License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>