force-app/main/default/objects/BrokerApplication__c/fields/CommercialLicenseNumberOld__c.field-meta.xml
<CustomField>
    <fullName>CommercialLicenseNumberOld__c</fullName>
    <label>Commercial License Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>