force-app/main/default/objects/BrokerApplication__c/fields/CompanyPhone_Number__c.field-meta.xml
<CustomField>
    <fullName>CompanyPhone_Number__c</fullName>
    <description>Company Phone Number</description>
    <label>Company Phone Number</label>
    <type>Phone</type>
</CustomField>