force-app/main/default/objects/BrokerApplication__c/fields/CompanyPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>CompanyPhoneNumber__c</fullName>
    <description>This field is not in Use Currently.</description>
    <label>Company Phone Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>