force-app/main/default/objects/BrokerApplication__c/fields/CurrentScreen__c.field-meta.xml
<CustomField>
    <fullName>CurrentScreen__c</fullName>
    <description>Stores the last screen visited by the user during the application process. Used by the frontend to redirect the user from the &quot;Track My Application&quot; flow.</description>
    <label>Current Screen</label>
    <length>25</length>
    <type>Text</type>
</CustomField>