force-app/main/default/objects/BrokerApplication__c/fields/Debug_Email__c.field-meta.xml
<CustomField>
    <fullName>Debug_Email__c</fullName>
    <description>This field is created for testing and debugging purposes.</description>
    <label>Debug Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>