force-app/main/default/objects/BrokerApplication__c/fields/Drawloop_Next__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next__c</fullName>
    <label>Drawloop_Next</label>
    <length>255</length>
    <type>Text</type>
</CustomField>