force-app/main/default/objects/BrokerApplication__c/fields/Emirate__c.field-meta.xml
<CustomField>
    <fullName>Emirate__c</fullName>
    <label>Emirate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Emirates</valueSetName>
    </valueSet>
</CustomField>