force-app/main/default/objects/BrokerApplication__c/fields/IBANReconfirmation__c.field-meta.xml
<CustomField>
    <fullName>IBANReconfirmation__c</fullName>
    <label>IBAN Reconfirmation</label>
    <length>33</length>
    <type>Text</type>
</CustomField>