force-app/main/default/objects/BrokerApplication__c/fields/IsAgreementExpired__c.field-meta.xml
<CustomField>
    <fullName>IsAgreementExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Agreement Expired</label>
    <type>Checkbox</type>
</CustomField>