force-app/main/default/objects/BrokerApplication__c/fields/isRequestForReAgreement__c.field-meta.xml
<CustomField>
    <fullName>isRequestForReAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the broker agency has requested to re-initiate the agreement process.</description>
    <label>is Request For Re-Agreement</label>
    <type>Checkbox</type>
</CustomField>