force-app/main/default/objects/BrokerApplication__c/fields/IsRFIUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsRFIUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is RFI Updated</label>
    <type>Checkbox</type>
</CustomField>