force-app/main/default/objects/BrokerApplication__c/fields/isSuspended__c.field-meta.xml
<CustomField>
    <fullName>isSuspended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Suspended</label>
    <type>Checkbox</type>
</CustomField>