force-app/main/default/objects/BrokerApplication__c/fields/IsTerminated__c.field-meta.xml
<CustomField>
    <fullName>IsTerminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTerminated</label>
    <type>Checkbox</type>
</CustomField>