force-app/main/default/objects/BrokerApplication__c/fields/IsTradeLicenseExpired__c.field-meta.xml
<CustomField>
    <fullName>IsTradeLicenseExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Trade License Expired</label>
    <type>Checkbox</type>
</CustomField>