force-app/main/default/objects/BrokerApplication__c/fields/IsVATRegistered__c.field-meta.xml
<CustomField>
    <fullName>IsVATRegistered__c</fullName>
    <label>Is VAT Registered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>