force-app/main/default/objects/BrokerApplication__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>License_Type</valueSetName>
    </valueSet>
</CustomField>