force-app/main/default/objects/BrokerApplication__c/fields/ORNADM__c.field-meta.xml
<CustomField>
    <fullName>ORNADM__c</fullName>
    <description>Stores the agency’s ORN/ADM registration number.</description>
    <label>ORN/ADM</label>
    <length>18</length>
    <type>Text</type>
</CustomField>