force-app/main/default/objects/BrokerApplication__c/fields/RegisteredCity__c.field-meta.xml
<CustomField>
    <fullName>RegisteredCity__c</fullName>
    <label>Registered City</label>
    <length>18</length>
    <type>Text</type>
</CustomField>