force-app/main/default/objects/BrokerApplication__c/fields/RegisteredCountry__c.field-meta.xml
<CustomField>
    <fullName>RegisteredCountry__c</fullName>
    <label>Registered Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryPicklist</valueSetName>
    </valueSet>
</CustomField>