force-app/main/default/objects/BrokerApplication__c/fields/RegisteredEmirate__c.field-meta.xml
<CustomField>
    <fullName>RegisteredEmirate__c</fullName>
    <label>Registered Emirate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Emirates</valueSetName>
    </valueSet>
</CustomField>