force-app/main/default/objects/BrokerApplication__c/fields/RegisteredState__c.field-meta.xml
<CustomField>
    <fullName>RegisteredState__c</fullName>
    <label>Registered State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>