force-app/main/default/objects/BrokerApplication__c/fields/RegistrationEscalationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationEscalationDate__c</fullName>
    <description>This is the date when the Registration Request related Escalation will be initiated. Example: Escalate 24 hours after the Broker Application Request was assigned to BBM Team.</description>
    <label>Registration Escalation Date</label>
    <type>DateTime</type>
</CustomField>