force-app/main/default/objects/BrokerApplication__c/fields/RejectedByBL__c.field-meta.xml
<CustomField>
    <fullName>RejectedByBL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected By BL</label>
    <type>Checkbox</type>
</CustomField>