force-app/main/default/objects/BrokerApplication__c/fields/RejectionComments__c.field-meta.xml
<CustomField>
    <fullName>RejectionComments__c</fullName>
    <label>Rejection Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>