force-app/main/default/objects/BrokerApplication__c/fields/RFIComments__c.field-meta.xml
<CustomField>
    <fullName>RFIComments__c</fullName>
    <label>RFI Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>