force-app/main/default/objects/BrokerApplication__c/fields/RFICount__c.field-meta.xml
<CustomField>
    <fullName>RFICount__c</fullName>
    <label>RFI Count</label>
    <summaryForeignKey>RFI__c.BrokerApplication__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>