force-app/main/default/objects/BrokerApplication__c/fields/RFIEscalationDate__c.field-meta.xml
<CustomField>
    <fullName>RFIEscalationDate__c</fullName>
    <description>This is the date when the RFI Response review related Escalation will be initiated. Example: Escalate 24 hours after the Broker responded to Requested RFI and the same is notified to bloom.</description>
    <label>RFI Escalation Date</label>
    <type>DateTime</type>
</CustomField>