force-app/main/default/objects/BrokerApplication__c/fields/RFIRaisedBy__c.field-meta.xml
<CustomField>
    <fullName>RFIRaisedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFI Raised By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>