force-app/main/default/objects/BrokerApplication__c/fields/SendToBL__c.field-meta.xml
<CustomField>
    <fullName>SendToBL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To BL</label>
    <type>Checkbox</type>
</CustomField>