force-app/main/default/objects/BrokerApplication__c/fields/SuspensionReason__c.field-meta.xml
<CustomField>
    <fullName>SuspensionReason__c</fullName>
    <label>Suspension Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>