force-app/main/default/objects/BrokerApplication__c/fields/SuspensionTenure__c.field-meta.xml
<CustomField>
    <fullName>SuspensionTenure__c</fullName>
    <inlineHelpText>In Days</inlineHelpText>
    <label>Suspension Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>