force-app/main/default/objects/BrokerApplication__c/fields/TaxRegistrationExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>TaxRegistrationExpiryDate__c</fullName>
    <description>The expiration date of the company&apos;s tax registration certificate.</description>
    <label>Tax Registration Expiry Date</label>
    <type>Date</type>
</CustomField>