force-app/main/default/objects/BrokerApplication__c/fields/TaxRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>TaxRegistrationNumber__c</fullName>
    <description>Tax Registration Number  = UAE VAT Register Number (Account)</description>
    <label>Tax Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>