force-app/main/default/objects/BrokerApplication__c/fields/TerminationReason__c.field-meta.xml
<CustomField>
    <fullName>TerminationReason__c</fullName>
    <label>Termination Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>