force-app/main/default/objects/BrokerApplication__c/fields/Test_Flow_Run__c.field-meta.xml
<CustomField>
    <fullName>Test_Flow_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Flow Run</label>
    <type>Checkbox</type>
</CustomField>