force-app/main/default/objects/BrokerApplication__c/fields/TradeLicenseExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>TradeLicenseExpiryDate__c</fullName>
    <label>Trade License Expiry Date</label>
    <type>Date</type>
</CustomField>