force-app/main/default/objects/BrokerApplication__c/fields/TradeLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>TradeLicenseNumber__c</fullName>
    <label>Trade License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>