force-app/main/default/objects/BrokerApplication__c/fields/TradeLicenseRemainingDays__c.field-meta.xml
<CustomField>
    <fullName>TradeLicenseRemainingDays__c</fullName>
    <label>Trade License Remaining Days</label>
    <length>75</length>
    <type>Text</type>
</CustomField>