force-app/main/default/objects/BrokerApplication__c/fields/TypeofEstablishment__c.field-meta.xml
<CustomField>
    <fullName>TypeofEstablishment__c</fullName>
    <label>Type of Establishment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Establishment</valueSetName>
    </valueSet>
</CustomField>