force-app/main/default/objects/BrokerApplication__c/fields/UnderFinalReview__c.field-meta.xml
<CustomField>
    <fullName>UnderFinalReview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Final Review</label>
    <type>Checkbox</type>
</CustomField>