force-app/main/default/objects/BrokerApplication__c/fields/VATUndertakingIssueDate__c.field-meta.xml
<CustomField>
    <fullName>VATUndertakingIssueDate__c</fullName>
    <label>VAT Undertaking Issue Date</label>
    <type>Date</type>
</CustomField>