force-app/main/default/objects/BrokerApplication__c/fields/WarningCounter__c.field-meta.xml
<CustomField>
    <fullName>WarningCounter__c</fullName>
    <label>Warning Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>