force-app/main/default/objects/BrokerApplication__c/fields/ZipCodePOBoxNumber__c.field-meta.xml
<CustomField>
    <fullName>ZipCodePOBoxNumber__c</fullName>
    <label>Zip Code/PO Box Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>